--- a/app/styles/_about.scss
+++ b/app/styles/_about.scss
@@ -10,6 +10,10 @@
   padding: 1em;
   border-bottom: 1px solid #334f75;
 
+  .intro_text {
+    text-align: left;
+  }
+
   // Content
   .section_subtitle{
     text-align: center;
