UI bug related to find items to request button is now working fine

--- a/app/styles/_my_orders.scss
+++ b/app/styles/_my_orders.scss
@@ -296,6 +296,7 @@
   padding-left: 7px !important;
   font-size:1rem !important;
   text-decoration: underline;
+  background-color: $coral-red;
 }
 .cart-message-box{
   margin-top: 4rem;
