Validation Message all appears together now

--- a/app/templates/request/rbcl_identity_type_details.hbs
+++ b/app/templates/request/rbcl_identity_type_details.hbs
@@ -11,7 +11,7 @@
         <label id="id-initials"> RBCL </label>
       </div>
       <div class="columns small-3 medium-2 large-2">
-          {{numeric-input name="hk_id" id="hk-id-number" value=identityNumber minlength="4" maxlength="4" placeholder="XXXX" required='true' pattern=".{4,}" autoFocus=true}}
+          {{numeric-input name="hk_id" id="hk-id-number" value=identityNumber minlength="4" maxlength="4" placeholder="XXXX" required='true' pattern=".{4,}"}}
       </div>
       <div class="columns small-6 medium-6 large-8 x-with-brackets">
         / XX
