GCW-2725 fixed calendar icon for book-appointment at homepage

--- a/app/templates/components/book-appointment.hbs
+++ b/app/templates/components/book-appointment.hbs
@@ -7,7 +7,8 @@
 {{else}}
 {{#link-to "login" (query-params bookAppointment=true)}}
 <div class="button book-appointment {{if buttonStyle buttonStyle 'small action' }}">
-  {{ t "home.visit.action" }} <i class="fa">{{fa-icon 'calendar'}}</i>
+  <i class="fa">{{fa-icon 'calendar'}}</i>
+  {{ t "home.visit.action" }}
 </div>
 {{/link-to}}
 {{/if}}
