GCW-2936 fixed issue with double action at add-more-goods button

--- a/app/templates/order/goods_details.hbs
+++ b/app/templates/order/goods_details.hbs
@@ -44,7 +44,7 @@
             <div class='columns request-more link-blue add_package_link add_more_request'
               {{action "addRequest" on="click"}}>
               <span>{{t "order.goods_details.request_more"}}</span>
-              <i class='fa icon' {{action "addRequest" on="click"}}>{{fa-icon 'plus-circle' size='2x'}}</i>
+              <i class='fa icon'>{{fa-icon 'plus-circle' size='2x'}}</i>
             </div>
           </div>
           <br>
