--- a/app/styles/_my_orders.scss
+++ b/app/styles/_my_orders.scss
@@ -269,11 +269,23 @@
 .cancel-appointment-buttons {
   padding: 0.5rem;
   margin-top: 1rem !important;
+
+  a {
+    @media #{$small-only} {
+      font-size: 0.8rem !important;
+    }
+    @media #{$medium-only} {
+      font-size: 0.7rem !important;
+    }
+  }
+
 }
 
 .cancel-booking-warning {
-  font-size: 1.2rem !important;
   font-weight: bolder;
+  @media #{$large-only} {
+    font-size: 1.2rem !important;
+  }
 }
 
 .cancel-booking-error {
