Character limit added to first name and last name field

--- a/app/templates/order/client_information.hbs
+++ b/app/templates/order/client_information.hbs
@@ -121,10 +121,10 @@
                     </div>
 
                     <div class="small-5 columns client_first_name">
-                      {{input type="text" value=firstName id="hk-id-firstName" classNames=" center_align_placeholder" required='true'}}
+                      {{input type="text" value=firstName id="hk-id-firstName" classNames=" center_align_placeholder" required='true' maxlength="50"}}
                     </div>
                     <div class="small-5 columns client_last_name">
-                      {{input type="text" value=lastName id="hk-id-lastName" classNames="center_align_placeholder" required='true'}}
+                      {{input type="text" value=lastName id="hk-id-lastName" classNames="center_align_placeholder" required='true' maxlength="50"}}
                     </div>
                   </div>
                   <div class="small-12 columns input-error warning_empty">
