--- a/app/templates/privacy.hbs
+++ b/app/templates/privacy.hbs
@@ -1,16 +1,19 @@
 <div class="inner-wrap">
   <section class="main-section privacy faq_list">
+
     <nav class="tab-bar">
       <section class="left-large">
-        <div class="back-button" {{action 'back'}}>
+        {{#back-link fallbackRoute="/" }}
           {{fa-icon "angle-left"}} {{t "back"}}
-        </div>
+        {{/back-link}}
       </section>
+
       <section class="middle tab-bar-section">
         <h1 class="title">{{t "privacy.title"}}</h1>
       </section>
     </nav>
-    <br />
+    <br/>
+
     <div class="row">
       <div class="small-12 columns">
         <p>{{t "privacy.confidentiality"}}</p>
