--- a/app/templates/request_purpose.hbs
+++ b/app/templates/request_purpose.hbs
@@ -39,7 +39,7 @@
                {{/unless}}
               {{/unless}}
               {{validate-inputs
-                  elementCssIdentifiersArrayJson='["#people-count", "#description", ".district-selector select"]'
+                  elementCssIdentifiersArrayJson='["#description", ".district-selector select"]'
                   errorClass='form__control--error'
                   buttonId='#request-submit'
                 }}
@@ -49,10 +49,7 @@
                   {{t 'order.request_purpose.people_count_info'}}
                 </div>
                 <div class="people-count-input">
-                  {{#form-control}}
-                  {{numeric-input value=peopleCount name="people-count" required="true"  maxlength= "10" id="people-count"}}
-                  <div class='input-error'> {{t 'order.request_purpose.people_count_warning'}} </div>
-                  {{/form-control}}
+                  {{numeric-input value=peopleCount name="people-count" maxlength= "10" id="people-count"}}
                 </div>
               </div>
               <div class="row district-select">
