--- a/app/styles/components/_go_to_top_button.scss
+++ b/app/styles/components/_go_to_top_button.scss
@@ -1,12 +1,13 @@
 .back-to-top {
   position: fixed;
-  bottom: 1rem;
+  bottom: 4px;
+  margin-right:0.3rem;
   right: 0px;
   text-decoration: none;
   color: white;
   background-color: $button-bg-color;
   font-size: 0.65rem;
-  padding: 0.5rem;
+  padding: 0.4rem;
   font-weight: bold;
   display: none;
 }
