Issue fixed in backlink in login page

--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -4,7 +4,7 @@
 
       <nav class="tab-bar">
         <section class="left-large">
-          {{#link-to "browse" classNames="back"}}{{fa-icon "angle-left"}} {{t "back"}}{{/link-to}}
+          {{#back-link fallbackRoute="/"}}{{fa-icon "angle-left"}} {{t "back"}}{{/back-link}}
         </section>
 
         <section class="middle tab-bar-section">
