--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -88,7 +88,7 @@
         </div>
         <div>
           <div class="small">{{ t "about.tap_button" }}</div>
-          {{book-appointment}}
+          {{book-appointment prevPath="about"}}
         </div>
       </div>
     </div>
