--- a/app/templates/order/client_information.hbs
+++ b/app/templates/order/client_information.hbs
@@ -8,12 +8,10 @@
         <section class="main-section new-user-section ui login_page book_appointment_headers">
           <nav class="tab-bar">
             <section class="left-large inline-content">
-              {{fa-icon "angle-left"}}
-              {{#if (is-equal prevPath (is-or 'orders.booking' 'orders.goods'))}}
-                {{#link-to prevPath order.id classNames="back"}}{{t "back"}}{{/link-to}}
-              {{else}}
-                {{#link-to "request_purpose" (query-params bookAppointment=order.isAppointment orderId=order.id) classNames="back"}}{{t "back"}}{{/link-to}}
-              {{/if}}
+              <div class="back-button" {{action 'back'}}>
+                {{fa-icon "angle-left"}}
+                {{t "back"}}
+              </div>
             </section>
              <section class="middle tab-bar-section">
               <h1 class="title">{{t 'order.client_information.title'}}</h1>
