--- a/app/templates/order/confirm_booking.hbs
+++ b/app/templates/order/confirm_booking.hbs
@@ -8,7 +8,10 @@
         <section class="main-section new-user-section ui login_page large-10 large-offset-1 medium-10 medium-offset-1">
           <nav class="tab-bar">
             <section class="left-large inline-content">
-              {{fa-icon "angle-left"}} {{#link-to "order.schedule_details" order.id classNames="back"}}{{t "back"}}{{/link-to}}
+              <div class="back-button" {{action 'back'}}>
+                {{fa-icon "angle-left"}}
+                {{t "back"}}
+              </div>
             </section>
              <section class="middle tab-bar-section">
               <h1 class="title"> {{t "order.confirm_booking.title"}} </h1>
