--- a/app/templates/order/goods_details.hbs
+++ b/app/templates/order/goods_details.hbs
@@ -8,14 +8,10 @@
         <section class="main-section new-user-section ui login_page">
           <nav class="tab-bar">
             <section class="left-large inline-content">
-              {{fa-icon "angle-left"}}
-              {{#if fromClientInformation}}
-              {{#link-to 'order.client_information' order.id classNames="back"}}{{t "back"}}{{/link-to}}
-              {{else if (is-equal backLinkPath 'order.client_information')}}
-              {{#link-to backLinkPath order.id classNames="back"}}{{t "back"}}{{/link-to}}
-              {{else}}
-              {{#link-to backLinkPath classNames="back"}}{{t "back"}}{{/link-to}}
-              {{/if}}
+              <div class="back-button" {{action 'back'}}>
+                {{fa-icon "angle-left"}}
+                {{t "back"}}
+              </div>
             </section>
             <section class="middle tab-bar-section">
               <h1 class="title"> {{t "order.goods_details.title"}} </h1>
