--- a/app/templates/order/schedule_details.hbs
+++ b/app/templates/order/schedule_details.hbs
@@ -13,14 +13,10 @@
         <section class="main-section new-user-section ui login_page book_appointment_headers">
           <nav class="tab-bar">
             <section class="left-large inline-content">
-              {{fa-icon "angle-left"}}
-              {{#if (is-equal prevPath (is-or 'orders.booking' 'orders.goods'))}}
-              {{#link-to prevPath order.id classNames="back"}}{{t "back"}}{{/link-to}}
-              {{else if isAppointment }}
-              {{#link-to 'order.goods_details' order.id classNames="back"}}{{t "back"}}{{/link-to}}
-              {{else}}
-              {{#link-to 'order.client_information' order.id classNames="back"}}{{t "back"}}{{/link-to}}
-              {{/if}}
+              <div class="back-button" {{action 'back'}}>
+                {{fa-icon "angle-left"}}
+                {{t "back"}}
+              </div>
             </section>
             <section class="middle tab-bar-section">
               <h1 class="title"> {{t 'order.transport_details.title'}} </h1>
