--- a/app/templates/orders/_message_template.hbs
+++ b/app/templates/orders/_message_template.hbs
@@ -31,6 +31,7 @@
 </section>
 <div class="message-footer">
   <div class="btm message-form">
+    <div class="message-textbar-container" />
     <div class="row message-textbar">
       {{#if displayChatNote}}
       <div class="row">
@@ -45,7 +46,7 @@
           {{#validatable-form class="form-horizontal" onSubmit=(action 'sendMessage') as |form|}}
           <div class="row ui">
             <div class="small-9 large-10 medium-9 columns">
-              {{variable-height-textarea value=body name="body" required="true"  parentDiv="message-section"}}
+              {{variable-height-textarea value=body name="body" required="true" disabled=disabled isPrivate=isPrivateMessage orderId=model.id setMessageBody=(action 'setMessageBody') parseMessageBody= (action 'parseMessageBody')}}
             </div>
             <div class="small-3 large-2 medium-3 columns">
               {{#online-button classNames="button" onClick=(action "sendMessage") actionArgs=true}}
