GCW-3167 updating css and deleting variable-height-textarea file

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -28,6 +28,7 @@
 @import "my_account";
 @import "static_pages";
 @import "about";
+@import "mentions";
 
 @import "templates/home";
 @import "templates/loading";
