--- a/app/styles/_messages.scss
+++ b/app/styles/_messages.scss
@@ -1,14 +1,14 @@
-.tribute-container{
+.tribute-container {
   top: -13rem !important;
 }
 
-.messaging-tab{
+.messaging-tab {
   .btm {
     height: 60px;
     margin: 0 auto;
     text-align: center;
-    >div {
-      position: fixed;
+    > div {
+      position: relative;
       bottom: 0;
       .button {
         margin: 10px 0;
@@ -16,14 +16,15 @@
     }
   }
 
-  .message-section{
+  .message-section {
     margin-top: 15px;
     margin-bottom: 0.2em;
+    position: relative;
   }
 
   .message_details {
-    font-size: .7rem;
-    margin-bottom: .5rem;
+    font-size: 0.7rem;
+    margin-bottom: 0.5rem;
   }
 
   .user_icon {
@@ -35,10 +36,10 @@
     float: right;
     color: #000;
     width: 80%;
-    padding: .8rem;
+    padding: 0.8rem;
     margin-right: 2%;
-    margin-bottom: .8rem;
-    font-size: .9rem;
+    margin-bottom: 0.8rem;
+    font-size: 0.9rem;
     position: relative;
     -webkit-border-radius: 10px;
   }
@@ -47,7 +48,7 @@
     text-align: center;
     border-bottom: 1px solid #334f75;
     width: 100%;
-    line-height: .1em;
+    line-height: 0.1em;
     margin: 10px 0 20px;
 
     span {
@@ -61,32 +62,32 @@
     background-color: #fff;
     color: #000;
     width: 80%;
-    border-radius: .5rem;
-    padding: .8rem;
+    border-radius: 0.5rem;
+    padding: 0.8rem;
     margin-left: 2%;
-    margin-bottom: .8rem;
-    font-size: .9rem;
+    margin-bottom: 0.8rem;
+    font-size: 0.9rem;
     position: relative;
     -webkit-border-radius: 10px;
   }
 
   .message-form {
-    padding-top: .1rem;
-    padding-right: .2rem;
+    padding-top: 0.1rem;
+    padding-right: 0.2rem;
     z-index: 10;
   }
 
   .message-form .ui {
-    padding-bottom: .1rem;
+    padding-bottom: 0.1rem;
   }
 
   .message-base {
-    padding-top: .2em;
+    padding-top: 0.2em;
     background-color: #dee4eb;
 
     .button {
-      padding: .53rem;
-      border-radius: .2rem;
+      padding: 0.53rem;
+      border-radius: 0.2rem;
       line-height: 1.2rem;
       width: 5rem;
       margin: 0;
@@ -95,7 +96,8 @@
     }
   }
 
-  .message-textbar{
+  .message-textbar {
+    position: relative;
     @media #{$xxlarge-only} {
       width: 32% !important;
     }
@@ -104,16 +106,16 @@
       width: 50.5% !important;
     }
 
-    @media #{$small-only}{
+    @media #{$small-only} {
       width: 100% !important;
     }
 
     @media #{$large-only} {
-      width: 62.1% !important;
+      width: 86.1% !important;
     }
 
     @media #{$medium-only} {
-      width: 63.1% !important;
+      width: 86.1% !important;
     }
   }
 
@@ -145,4 +147,9 @@
 
 .has-error .message-bar {
   background: #fddbdc !important;
+}
+
+.message-textbar-container {
+  position: absolute !important;
+  left: -20rem !important;
 }
