--- a/app/templates/orders/_message_template.hbs
+++ b/app/templates/orders/_message_template.hbs
@@ -21,7 +21,7 @@
           {{display-datetime message.createdAt format="HH:mm"}}
         </div>
 
-        {{{apply-line-break message.body}}}
+        {{{apply-line-break message.parsedBody}}}
       </div>
       {{/if}}
       {{/each}}
