--- a/app/styles/_cart_sidebar.scss
+++ b/app/styles/_cart_sidebar.scss
@@ -100,6 +100,20 @@
   svg {
     transform: scaleX(-1);
   }
+
+  &.max-cart-count {
+    @media #{$large-only} {
+      margin-right: 20%;
+    }
+
+    @media #{$medium-only} {
+      margin-left: -1.2rem;
+    }
+
+    @media #{$small-only} {
+      margin-left: -1rem;
+    }
+  }
 }
 
 .show_cart_link {
@@ -121,19 +135,22 @@
     margin-top: -.3rem;
 
     .unread_length {
-      line-height: 1.3rem;
-      width: 1.2rem;
-      height: 1.2rem;
-      font-size: .6rem;
+      line-height: 1rem;
+      width: fit-content;
+      height: 1rem;
+      font-size: .7rem;
       display: block;
-      color: white;
+      color: $white;
       text-transform: uppercase;
-      text-align: center;
-      border-radius: 50%;
-      background: #ee4c4e;
+      border-radius: 16px;
+      background: $bright-red;
       font-weight: 700;
       margin-top: .2rem;
-      float: inherit;
+      padding: 0px 6px;
+    }
+
+    .max-cart-count {
+      margin-right: -0.4rem;
     }
   }
 }
