Refactoring for the required widget added

--- a/app/styles/_cart_sidebar.scss
+++ b/app/styles/_cart_sidebar.scss
@@ -59,6 +59,15 @@
     }
   }
 
+  .set-cart-column{
+    float: right;
+  }
+
+  .cart-column{
+    float: right;
+    margin-top: 0.2rem;
+  }
+
   .button {
     margin-left: 0 !important;
 
