--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -40,6 +40,7 @@
 @import "templates/client_information";
 @import "templates/schedule_details";
 @import "components/logo-banner";
+@import "components/quantity-widget";
 @import "components/add-request";
 @import "components/go_to_top_button";
 @import "components/select-appointment-date";
