--- a/app/styles/_request_purpose.scss
+++ b/app/styles/_request_purpose.scss
@@ -4,6 +4,10 @@
     margin-top: 1rem;
   }
 
+  .cart-row{
+    margin-top: 1.5rem;
+  }
+
   .input-error {
     background: #ED4C4E !important;
     color: white;
