Complete feature of adding quantity widget

--- a/app/styles/_cart_sidebar.scss
+++ b/app/styles/_cart_sidebar.scss
@@ -101,6 +101,11 @@
   }
 }
 
+.set-header {
+  padding-left: 1rem;
+  padding-top: 0.3rem;
+}
+
 .cart-icon {
   font-size: 1.3rem;
   vertical-align: baseline;
