GCW-3229 Settings to disable appointments

--- a/app/templates/components/book-appointment.hbs
+++ b/app/templates/components/book-appointment.hbs
@@ -1,14 +1,16 @@
-{{#if session.isLoggedIn}}
-<div class="button book-appointment {{if buttonStyle buttonStyle 'small action' }}"
-  {{action "redirectAsPerUserDetails"}}>
-  <i class="fa">{{fa-icon 'calendar'}}</i>
-  {{t (if isMyOrdersRoute "home.visit.new_appointment" "home.visit.action")}}
+<div>
+  {{#if session.isLoggedIn}}
+    <div class="button book-appointment {{if disabled 'disabled'}} {{if buttonStyle buttonStyle 'small action' }}"
+      {{action "redirectAsPerUserDetails"}}>
+      <i class="fa">{{fa-icon 'calendar'}}</i>
+      {{t (if isMyOrdersRoute "home.visit.new_appointment" "home.visit.action")}}
+    </div>
+    {{else}}
+    {{#link-to "login" (query-params bookAppointment=true) disabled=disabled }}
+    <div class="button book-appointment {{if disabled 'disabled'}} {{if buttonStyle buttonStyle 'small action' }}">
+      <i class="fa">{{fa-icon 'calendar'}}</i>
+      {{ t "home.visit.action" }}
+    </div>
+    {{/link-to}}
+  {{/if}}
 </div>
-{{else}}
-{{#link-to "login" (query-params bookAppointment=true)}}
-<div class="button book-appointment {{if buttonStyle buttonStyle 'small action' }}">
-  <i class="fa">{{fa-icon 'calendar'}}</i>
-  {{ t "home.visit.action" }}
-</div>
-{{/link-to}}
-{{/if}}
