GCW-3229 Add warning messages to the about page

--- a/app/styles/_about.scss
+++ b/app/styles/_about.scss
@@ -10,6 +10,10 @@
   padding: 1em;
   border-bottom: 1px solid #334f75;
 
+  .warning-text {
+    text-align: center;
+  }
+
   .intro_text {
     text-align: left;
   }
