--- a/app/templates/cart_content/_full_view.hbs
+++ b/app/templates/cart_content/_full_view.hbs
@@ -51,7 +51,7 @@
                 </div>
                 <div class=" small-3 columns remove_link cart-column">
                   <div class="set-cart-column">
-                    {{quantity-widget package=row}}
+                    {{quantity-widget package=row action="setUpdatedValue"}}
                   </div>
                 </div>
               </div>
@@ -80,7 +80,7 @@
                 <span>{{t "cart_content.remove"}}</span>
               </div>
               <div class="cart-column">
-                {{quantity-widget package=row.record}}
+                {{quantity-widget package=row.record action="setUpdatedValue"}}
               </div>
             </div>
           </div>
