--- a/app/templates/package_set.hbs
+++ b/app/templates/package_set.hbs
@@ -63,7 +63,7 @@
           <div class="item_type">
             {{model.packageType.name}}
           </div>
-        <div class="item_type">
+        <div class="item_details">
             {{package.notes}}
           </div>
       </nav>
@@ -105,7 +105,7 @@
           </div>
           {{#unless (is-equal model.isSet true)}}
           <div class=" small-4 large-4 medium-4 columns widget">
-            {{quantity-widget package=package setElementValue="setElementValue"}}
+            {{quantity-widget package=package action="setRequestValue"}}
           </div>
           {{/unless}}
         </div>
