--- a/app/templates/package_set.hbs
+++ b/app/templates/package_set.hbs
@@ -101,11 +101,11 @@
         {{else}}
         <div class="row quantity-fields">
           <div class="small-4 medium-4 large-4 columns">
-            <button class="request-item" {{action 'add' model elementValue target=cart}}> {{t "item.request_item"}} </button>
+            <button class="request-item" {{action 'add' model requestedQty target=cart}}> {{t "item.request_item"}} </button>
           </div>
           {{#unless (is-equal model.isSet true)}}
           <div class=" small-4 large-4 medium-4 columns widget">
-            {{quantity-widget package=package action="setRequestValue"}}
+            {{quantity-widget package=package type="request" requestAction=(action 'setRequestValue')}}
           </div>
           {{/unless}}
         </div>
