--- a/app/templates/order/_embed_cart_detail.hbs
+++ b/app/templates/order/_embed_cart_detail.hbs
@@ -40,7 +40,7 @@
             </div>
             <div class="small-4 columns">
               <div class="cart-widget">
-                {{quantity-widget package=row type="update" updateAction=(action 'setUpdatedValue')}}
+                {{quantity-widget package=row type="update" updateAction=(action 'UpdateRequestedValue')}}
               </div>
             </div>
           </div>
@@ -65,7 +65,7 @@
         </div>
         <div class="small-4 columns">
           <div class="cart-widget">
-            {{quantity-widget package=row.record type="update" updateAction=(action 'setUpdatedValue')}}
+            {{quantity-widget package=row.record type="update" updateAction=(action 'UpdateRequestedValue')}}
           </div>
         </div>
       </div>
