--- a/app/templates/package_set.hbs
+++ b/app/templates/package_set.hbs
@@ -105,7 +105,7 @@
           </div>
           {{#unless (is-equal model.isSet true)}}
           <div class=" small-4 large-4 medium-4 columns widget">
-            {{quantity-widget package=package type="request" requestAction=(action 'setRequestValue')}}
+            {{quantity-widget package=package type="request" requestAction=(action 'setRequestedQty')}}
           </div>
           {{/unless}}
         </div>
