Quantity-widget QA fix

--- a/app/styles/_cart_sidebar.scss
+++ b/app/styles/_cart_sidebar.scss
@@ -66,6 +66,10 @@
   .cart-column{
     float: right;
     margin-top: 0.2rem;
+
+    & .quantity-widget{
+      float: right
+    }
   }
 
   .button {
